KKUTU_ERROR.log
This is an error log file of the game server.
You may use like `tail -f KKUTU_ERROR.log` to watch this.
:8506 [2020-7-4 19:49:25] ERROR: SyntaxError: More than one default clause in switch statement
C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\games\classic.js:573
		case "KDA": default:
		            ^^^^^^^

SyntaxError: More than one default clause in switch statement
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.exports.init (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\kkutu.js:61:13)
    at Object.MainDB.ready (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\slave.js:103:8)
    at C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Web\db.js:87:30:8506 [2020-7-4 19:49:37] ERROR: SyntaxError: More than one default clause in switch statement
C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\games\classic.js:573
		case "KDA": default:
		            ^^^^^^^

SyntaxError: More than one default clause in switch statement
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.exports.init (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\kkutu.js:61:13)
    at Object.MainDB.ready (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\slave.js:103:8)
    at C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Web\db.js:87:30:8506 [2020-7-4 20:38:33] ERROR: SyntaxError: Unexpected token '?'
C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\games\classic.js:18
?var charx = require('../../sub/util');
^

SyntaxError: Unexpected token '?'
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.exports.init (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\kkutu.js:61:13)
    at Object.MainDB.ready (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\slave.js:103:8)
    at C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Web\db.js:87:30:8506 [2020-7-4 20:38:43] ERROR: SyntaxError: Unexpected token '?'
C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\games\classic.js:18
?var charx = require('../../sub/util');
^

SyntaxError: Unexpected token '?'
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.exports.init (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\kkutu.js:61:13)
    at Object.MainDB.ready (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\slave.js:103:8)
    at C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Web\db.js:87:30:8506 [2020-7-4 20:38:54] ERROR: SyntaxError: Unexpected token '?'
C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\games\classic.js:18
?var charx = require('../../sub/util');
^

SyntaxError: Unexpected token '?'
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.exports.init (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\kkutu.js:61:13)
    at Object.MainDB.ready (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\slave.js:103:8)
    at C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Web\db.js:87:30:8506 [2020-7-4 20:39:04] ERROR: SyntaxError: Unexpected token '?'
C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\games\classic.js:18
?var charx = require('../../sub/util');
^

SyntaxError: Unexpected token '?'
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.exports.init (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\kkutu.js:61:13)
    at Object.MainDB.ready (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\slave.js:103:8)
    at C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Web\db.js:87:30:8506 [2020-7-4 20:39:14] ERROR: SyntaxError: Unexpected token '?'
C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\games\classic.js:18
?var charx = require('../../sub/util');
^

SyntaxError: Unexpected token '?'
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Module.require (internal/modules/cjs/loader.js:1019:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.exports.init (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\kkutu.js:61:13)
    at Object.MainDB.ready (C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Game\slave.js:103:8)
    at C:\Users\munch\Desktop\KKuTu-5663dd47d53b05c6c16f1e0568eef5b5095e3ca2\Server\lib\Web\db.js:87:30